korjaus blackjackiin - dealer ei enää nosta korttia kun pelaaja on bustannut